[package]
name = "axum-insights"
version = "0.3.2"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "An Azure Application Insights exporter for axum via tracing."
readme = "README.md"
homepage = "https://github.com/twitchax/axum-insights"
repository = "https://github.com/twitchax/axum-insights"
keywords = ["axum", "application", "insights", "appinsights", "tracing"]
categories = ["web-programming"]

[dependencies]
tracing = { version = "0.1.40" }
opentelemetry = { version = "0.22.0"}
opentelemetry-application-insights = { version = "0.30.0", features = ["reqwest", "reqwest-client", "metrics", "live-metrics"] }
opentelemetry-http = { version = "0.11.1", features = ["reqwest", "tokio"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"]}
tracing-opentelemetry = { version = "0.23.0" }
tracing-subscriber = { version = "0.3.17" }
futures = { version = "0.3.28" }
http = { version = "1.1.0" }
axum = { version = "0.7.5", features = ["macros"] }
hyper = { version = "1.3.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
serde = { version = "1.0.126" }
serde_json = { version = "1.0.64" }
tokio = { version = "1.29.1", features = ["rt", "macros", "signal", "parking_lot"] }
reqwest = { version = "0.11.27", features = ["blocking"] }